--- a/about.html
+++ b/about.html
@@ -5,8 +5,12 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<p> ► I am actively engaging with the quantum community and clients to promote TKET, Quantinuum's open access, quantum compiler, which helps users within the quantum ecosystem get the most out of today’s quantum hardware.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+<p> ► I organize and deliver TKET quantum SDK presentations, workshops, and hackathon challenges.</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p class="mb-5"> ► Communicating about TKET quantum SDK to academic and developer communities.</p>
+
+<p> ► I create learning content on quantum computing for audiences of varying experience levels.</p>
+
+<p> ► I work with quantum computing educators globally.</p>
