--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p> ► I am actively engaging with the quantum community and clients to promote TKET, Quantinuum's open access, quantum compiler, which helps users within the quantum ecosystem get the most out of today’s quantum hardware.</p>
+<p> I am actively engaging with the quantum community and clients to promote TKET, Quantinuum's open access, quantum compiler, which helps users within the quantum ecosystem get the most out of today’s quantum hardware.</p>
 
 <p> ► I organize and deliver TKET quantum SDK presentations, workshops, and hackathon challenges.</p>
 
-<p class="mb-5"> ► Communicating about TKET quantum SDK to academic and developer communities.</p>
+<p> ► Communicating about TKET quantum SDK to academic and developer communities.</p>
 
 <p> ► I create learning content on quantum computing for audiences of varying experience levels.</p>
 
