--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 ---
 layout: page
 title: Contact Me
-description: Have questions? I have answers.
+description: Don't hesitate to contact me if you are interested in a Quantinuum/TKET presentation/workshop or need help getting started with 
+"pip install pytket".
 background: '/img/bg-contact.jpg'
 form: true
 ---
