--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Contact Me
 description: Don't hesitate to contact me if you are interested in a Quantinuum/TKET presentation/workshop or need help getting started with 
-"pip install pytket".
+pip install pytket.
 background: '/img/bg-contact.jpg'
 form: true
 ---
