--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: Contact Me
-description: Don't hesitate to contact me if you are interested in a Quantinuum/TKET presentation/workshop or need help getting started with 
-pip install pytket.
+description: Don't hesitate to contact me if you are interested in a Quantinuum/TKET presentation/workshop.
 background: '/img/bg-contact.jpg'
 form: true
 ---
