--- a/contact.html
+++ b/contact.html
@@ -6,4 +6,6 @@ background: '/img/bg-contact.jpg'
 form: true
 ---
 
-<p>Want to get in touch? Send an email to kathrin.spendier@quantinuum.com or click on the Email icon below and I will get back to you as soon as possible!</p>
+<p>Want to get in touch?</p>
+  
+<p>Send email to </a> <a href="kathrin.spendier@quantinuum.com">or click on the Email icon below and I will get back to you as soon as possible!</a></p>
