--- a/contact.html
+++ b/contact.html
@@ -8,4 +8,4 @@ form: true
 
 <p>Want to get in touch?</p>
   
-<p>Send email to </a> <a href="kathrin.spendier@quantinuum.com">or click on the Email icon below and I will get back to you as soon as possible!</a></p>
+<p>Send email to kathrin.spendier@quantinuum.com or click on the Email icon below and I will get back to you as soon as possible!</p>
