--- a/contact.html
+++ b/contact.html
@@ -9,3 +9,5 @@ form: true
 <p>Want to get in touch?</p>
   
 <p>Send email to kathrin.spendier@quantinuum.com or click on the Email icon below and I will get back to you as soon as possible!</p>
+
+<p><a href="mailto:someone@example.com">Send email</a></p>
