--- a/contact.html
+++ b/contact.html
@@ -10,4 +10,4 @@ form: true
   
 <p>Send email to kathrin.spendier@quantinuum.com or click on the Email icon below and I will get back to you as soon as possible!</p>
 
-<p><a href="mailto:someone@example.com">Send email</a></p>
+<p><a href="mailto:kathrin.spendier@quantinuum.com">Send email</a> and I will get back to you as soon as possible!</p>
