--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,5 @@ form: true
 ---
 
 <p>Want to get in touch?</p>
-  
-<p>Send email to kathrin.spendier@quantinuum.com or click on the Email icon below and I will get back to you as soon as possible!</p>
 
-<p><a href="mailto:kathrin.spendier@quantinuum.com">Send email</a> and I will get back to you as soon as possible!</p>
+<p><a href="mailto:kathrin.spendier@quantinuum.com"> Just send an email</a> and I will get back to you as soon as possible!</p>
