--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ background: '/img/bg-about.jpg'
 
 <p> ► I organize and deliver TKET quantum SDK presentations, workshops, and hackathon challenges.</p>
 
-<p> ► I Communicate about TKET quantum SDK to academic and developer communities.</p>
+<p> ► I communicate about TKET quantum SDK to academic and developer communities.</p>
 
 <p> ► I create learning content on quantum computing for audiences of varying experience levels.</p>
 
