--- a/presentations.html
+++ b/presentations.html
@@ -14587,8 +14587,14 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
+</li>
+<li><p>School of Mines, Quantum Engineering Seminar, Colorado, January 24, 2023</p>
+</li>
+</li>
+<li><p>University of Northern Colorado, Physics Seminar, Colorado, January 20, 2023</p>
+</li>
 <li><p>Washington DC Quantum Computing Meetup, online, January 14, 2023 
-<a href="https://www.meetup.com/washington-quantum-computing-meetup/">https://www.meetup.com/washington-quantum-computing-meetup/</a></p>
+<a href="https://www.youtube.com/watch?v=NjFXVHEoOf8">presentation recording</a></p>
 </li>
 <li><p>University of Lübeck, online, December 6, 2022</p>
 </li>
