--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ background: '/img/bg-about.jpg'
 <p>I received my BS in Physics and Applied Mathematics with honors and my Ph.D. in Physics with distinction from the University of New Mexico. 
 After a year as Research Associate, I joined the University of Colorado Colorado Springs (UCCS) as a tenure-track faculty in Physics. 
 I earned tenure at UCCS by <a href="https://scholar.google.com/citations?user=S3bNbmMAAAAJ&hl=en">researching biophysical phenomena using super-resolution microscopy techniques and condensed matter physics</a>. 
-During my time at UCCS, I developed and taught over ten different physics undergraduate and graduate courses. 
+During my time at UCCS, I developed and taught numerous physics undergraduate and graduate courses. 
 After joining Quantinuum as a Quantum Evangelist, I remain an Associate Professor with a research affiliation at UCCS.<p>
 
 <p> As a Quantum Evangelist, I am actively engaging with the quantum community and clients to promote <a href="https://www.quantinuum.com/developers/tket">TKET, Quantinuum's open access, quantum compiler,</a>  which helps users within the quantum ecosystem get the most out of today’s quantum hardware.</p>
