--- a/presentations.html
+++ b/presentations.html
@@ -14588,17 +14588,18 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
-<li><p>School of Mines, Quantum Engineering Seminar, Colorado, January 24, 2023</p>
+<li><p>Colorado Mesa University, Physics Seminar, Colorado, February 9, 2023</p>
 </li>
+<li><p>Colorado School of Mines, Quantum Engineering Seminar, Colorado, January 24, 2023</p>
 </li>
 <li><p>University of Northern Colorado, Physics Seminar, Colorado, January 20, 2023</p>
 </li>
-<li><p>Washington DC Quantum Computing Meetup, online, January 14, 2023 
-<a href="https://www.youtube.com/watch?v=NjFXVHEoOf8">presentation recording</a></p>
+<li><p>Washington DC Quantum Computing Meetup, online, January 14, 2023 <br>
+<a href="https://www.youtube.com/watch?v=NjFXVHEoOf8">link to recording</a></p>
 </li>
 <li><p>University of Lübeck, online, December 6, 2022</p>
 </li>
-<li><p>NYC Quantum Meetup, online, October 12, 2022</p>
+<li><p>New York City Quantum Meetup, online, October 12, 2022</p>
 </li>
 <li><p>Institute of Science and Technology Austria (ISTA), September 1, 2022</p>
 </li>
