--- a/presentations.html
+++ b/presentations.html
@@ -14618,7 +14618,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
-<li><p>iQuHACK, MIT, Cambridge, MA, January 27th-29th, 2023</p>
+	
+	
+<li><p><a href="https://www.iquise.mit.edu/iQuHACK/2023-01-27">2023 iQuHACK</a>, MIT, Cambridge, MA, January 27th-29th, 2023
+<br><a href="https://youtu.be/QUlib6KNff0">link to TKET H1 emulator tutorial video</a>
+<br><a href="https://github.com/iQuHACK/2023_Quantinuum">link to workshop notebook on GitHub</a></p>
 </li>
 <li><p>TKET workshop, University of Colorado Colorado Springs, Colorado, November 1, 3, and 8, 2022 
 <br><a href="https://github.com/spendierk/UCCS-TKET-workshop-2022">link to workshop notebook on GitHub</a></p>
