--- a/presentations.html
+++ b/presentations.html
@@ -14586,7 +14586,10 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
+</li>
+<li><p>University of Texas at Austin, Quantum Collective at UT Seminar, Austin, Texas, February 24, 2023</p>
 </li>
 <li><p>Colorado Mesa University, Physics Seminar, Colorado, February 9, 2023</p>
 </li>
@@ -14619,10 +14622,12 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 	
-	
+</li>
+<li><p>TKET workshop, University of North Dakota, Grand Forks, North Dakota, March 2 and 3, 2023 
+</li>	
 <li><p><a href="https://www.iquise.mit.edu/iQuHACK/2023-01-27">2023 iQuHACK</a>, MIT, Cambridge, MA, January 27th-29th, 2023
 <br><a href="https://youtu.be/QUlib6KNff0">link to TKET H1 emulator tutorial video</a>
-<br><a href="https://github.com/iQuHACK/2023_Quantinuum">link to workshop notebook on GitHub</a></p>
+<br><a href="https://github.com/iQuHACK/2023_Quantinuum">link to challenge and tutorial notebooks on GitHub</a></p>
 </li>
 <li><p>TKET workshop, University of Colorado Colorado Springs, Colorado, November 1, 3, and 8, 2022 
 <br><a href="https://github.com/spendierk/UCCS-TKET-workshop-2022">link to workshop notebook on GitHub</a></p>
@@ -14649,6 +14654,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+
+<h1 id="STEM Events">STEM Events<a class="anchor-link" href="#STEM Events">&#182;</a></h1><ul>
+<li>Provided a pyTKET bricks and Quantum in Pictures demo during <a href="https://girlday.utexas.edu/">the Girl Day at UT Austin</a> in collaboration with <a href="https://quantum-collective.webflow.io/">the Quantum Collective at UT Austin</a>, University of Texas at Austin, Februrary 25, 2023 How Quantum Technology is Transforming Industry Sectors, IEEE Quantum Week (QCE22), in Broomfield, Colorado, September 18, 2022</li>
+</ul>
+	
 <h1 id="Panels">Panels<a class="anchor-link" href="#Panels">&#182;</a></h1><ul>
 <li>How Quantum Technology is Transforming Industry Sectors, IEEE Quantum Week (QCE22), in Broomfield, Colorado, September 18, 2022</li>
 </ul>
