--- a/presentations.html
+++ b/presentations.html
@@ -14656,7 +14656,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 
 <h1 id="STEM Events">STEM Events<a class="anchor-link" href="#STEM Events">&#182;</a></h1><ul>
-<li>Provided a pyTKET bricks and Quantum in Pictures demo during <a href="https://girlday.utexas.edu/">the Girl Day at UT Austin</a> in collaboration with <a href="https://quantum-collective.webflow.io/">the Quantum Collective at UT Austin</a>, University of Texas at Austin, Februrary 25, 2023</li>
+<li>Provided a <a href="https://github.com/spendierk/pytket-bricks">PyTKET bricks</a> and <a href="https://www.quantinuum.com/news/quantum-in-pictures">Quantum in Pictures</a> book demo during <a href="https://girlday.utexas.edu/">the Girl Day at UT Austin</a> in collaboration with <a href="https://quantum-collective.webflow.io/">the Quantum Collective at UT Austin</a>, University of Texas at Austin, Februrary 25, 2023</li>
 </ul>
 	
 <h1 id="Panels">Panels<a class="anchor-link" href="#Panels">&#182;</a></h1><ul>
