--- a/presentations.html
+++ b/presentations.html
@@ -14589,6 +14589,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
+<li><p>Colorado State University Pueblo, Science Seminar, Pubelo, Colorado, March 8, 2023</p>
+</li>
 <li><p>University of Texas at Austin, Quantum Collective at UT Seminar, Austin, Texas, February 24, 2023</p>
 </li>
 <li><p>Colorado Mesa University, Physics Seminar, Colorado, February 9, 2023</p>
