--- a/presentations.html
+++ b/presentations.html
@@ -14589,9 +14589,10 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
-<li><p>Colorado State University Pueblo, Science Seminar, Pubelo, Colorado, March 8, 2023</p>
+<li><p>Colorado State University Pueblo, College of STEM - Food for Thought Seminar, Pubelo, Colorado, March 8, 2023</p>
 </li>
-<li><p>University of Texas at Austin, Quantum Collective at UT Seminar, Austin, Texas, February 24, 2023</p>
+<li><p>University of Texas at Austin, Quantum Collective at UT Seminar, Austin, Texas, February 24, 2023 <br>
+<a href="https://youtu.be/edN7JEpNjlA">link to recording</a></p>
 </li>
 <li><p>Colorado Mesa University, Physics Seminar, Colorado, February 9, 2023</p>
 </li>
@@ -14626,6 +14627,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 	
 </li>
 <li><p>TKET workshop, University of North Dakota, Grand Forks, North Dakota, March 2 and 3, 2023 
+<br><a href="https://github.com/spendierk/UND-TKET-Workshop-2023">link to workshop notebook on GitHub</a></p>
 </li>	
 <li><p><a href="https://www.iquise.mit.edu/iQuHACK/2023-01-27">2023 iQuHACK</a>, MIT, Cambridge, MA, January 27th-29th, 2023
 <br><a href="https://youtu.be/QUlib6KNff0">link to TKET H1 emulator tutorial video</a>
