--- a/presentations.html
+++ b/presentations.html
@@ -14589,7 +14589,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
-<li><p>US Air Force Academy, Physics colloquium, Colorado Springs, Colorado, March 17, 2023</p>
+<li><p>US Air Force Academy, Physics colloquium, Colorado Springs, Colorado, May, 2023</p>
+</li>
+<li><p>University of Wyoming, Condensed Matter Physics Colloquium, Laramie, Wyoming, March 31, 2023</p>
+</li>
+<li><p>Colorado State University Fort Collins, CSU Physics Seminar, Fort Collins, Colorado, March 30, 2023</p>
 </li>
 <li><p>Colorado State University Pueblo, College of STEM - Food for Thought Seminar, Pubelo, Colorado, March 8, 2023</p>
 </li>
