--- a/presentations.html
+++ b/presentations.html
@@ -14589,7 +14589,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
-<li><p>US Air Force Academy, Physics colloquium, Colorado Springs, Colorado, May, 2023</p>
+<li><p>Qsium, online, May 12, 2023</p>
+</li>
+<li><p>APS Quantum Scientist To-Go at Argos Community Schools, online, April 28, 2023</p>
 </li>
 <li><p>University of Wyoming, Condensed Matter Physics Colloquium, Laramie, Wyoming, March 31, 2023</p>
 </li>
@@ -14600,11 +14602,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><p>University of Texas at Austin, Quantum Collective at UT Seminar, Austin, Texas, February 24, 2023 <br>
 <a href="https://youtu.be/edN7JEpNjlA">link to recording</a></p>
 </li>
-<li><p>Colorado Mesa University, Physics Seminar, Colorado, February 9, 2023</p>
+<li><p>Colorado Mesa University, Physics Seminar, Grand Junction, Colorado, February 9, 2023</p>
 </li>
-<li><p>Colorado School of Mines, Quantum Engineering Seminar, Colorado, January 24, 2023</p>
+<li><p>Colorado School of Mines, Quantum Engineering Seminar, Golden, Colorado, January 24, 2023</p>
 </li>
-<li><p>University of Northern Colorado, Physics Seminar, Colorado, January 20, 2023</p>
+<li><p>University of Northern Colorado, Physics Seminar, Greeley, Colorado, January 20, 2023</p>
 </li>
 <li><p>Washington DC Quantum Computing Meetup, online, January 14, 2023 <br>
 <a href="https://www.youtube.com/watch?v=NjFXVHEoOf8">link to recording</a></p>
@@ -14613,9 +14615,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </li>
 <li><p>New York City Quantum Meetup, online, October 12, 2022</p>
 </li>
-<li><p>Institute of Science and Technology Austria (ISTA), September 1, 2022</p>
+<li><p>Institute of Science and Technology Austria (ISTA), Klosterneuburg, Austria September 1, 2022</p>
 </li>
-<li><p>Infineon, August 29, 2022</p>
+<li><p>Infineon, Villach, Austria, August 29, 2022</p>
 </li>
 </ul>
 
@@ -14631,6 +14633,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 	
+</li>
+<li><p>Introduction to Quantum Computing, <a href="https://indico.ictp.it/event/10163">ICTP-Quantinuum Quantum Hackathon</a>, Trieste, Italy, March 17, 2023 
+<br><a href="https://www.youtube.com/live/aSjUgTruU_Y?feature=share">link to lecture video</a></p>
 </li>
 <li><p>TKET workshop, University of North Dakota, Grand Forks, North Dakota, March 2 and 3, 2023 
 <br><a href="https://github.com/spendierk/UND-TKET-Workshop-2023">link to workshop notebook on GitHub</a></p>
