--- a/presentations.html
+++ b/presentations.html
@@ -14591,6 +14591,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </li>
 <li><p>Qsium, online, May 12, 2023</p>
 </li>
+<li><p>United States Air Force Academy, Physics and Meteorology Colloquium, Colorado Springs, Colorado, May 8, 2023</p>
+</li>
 <li><p>APS Quantum Scientist To-Go at Argos Community Schools, online, April 28, 2023</p>
 </li>
 <li><p>University of Wyoming, Condensed Matter Physics Colloquium, Laramie, Wyoming, March 31, 2023</p>
