--- a/presentations.html
+++ b/presentations.html
@@ -14589,7 +14589,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
-<li><p>Qsium, online, May 12, 2023</p>
+<li><p>California Polytechnic State University, Quantum Computing Club, online, May 15, 2023</p>
+</li>
+<li><p><a href="https://www.qsium.com/">Qsium</a>, Quantum Computing Guest Lecture, online, May 12, 2023</p>
 </li>
 <li><p>United States Air Force Academy, Physics and Meteorology Colloquium, Colorado Springs, Colorado, May 8, 2023</p>
 </li>
