--- a/presentations.html
+++ b/presentations.html
@@ -14636,7 +14636,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
-	
+
+</li>
+<li><p>Supporting Minority Serving Institutions in the Creation of a Diverse,
+<a href="https://www.quantumx.washington.edu/supporting-minority-serving-institutions-in-the-creation-of-a-diverse-quantum-ready-workforce/">Quantum-Ready Workforce Workshop</a>, Washington D.C., USA, July 12-13, 2023 
+</p>
 </li>
 <li><p>Introduction to Quantum Computing, <a href="https://indico.ictp.it/event/10163">ICTP-Quantinuum Quantum Hackathon</a>, Trieste, Italy, March 17, 2023 
 <br><a href="https://www.youtube.com/live/aSjUgTruU_Y?feature=share">link to lecture video</a></p>
