--- a/presentations.html
+++ b/presentations.html
@@ -14638,8 +14638,12 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 
 </li>
-<li><p>Supporting Minority Serving Institutions in the Creation of a Diverse,
-<a href="https://www.quantumx.washington.edu/supporting-minority-serving-institutions-in-the-creation-of-a-diverse-quantum-ready-workforce/">Quantum-Ready Workforce Workshop</a>, Washington D.C., USA, July 12-13, 2023 
+<li><p>Oak Ridge National Laboratory Quantum Computing User Forum,
+<a href="https://www.olcf.ornl.gov/calendar/quantum-computing-user-forum-2023/">TKET Workshop</a>,  Oak Ridge, TN, July 17-20, 2023 
+</p>
+</li>
+<li><p>Supporting Minority Serving Institutions in the Creation of a Diverse Quantum-Ready Workforce,
+<a href="https://www.quantumx.washington.edu/supporting-minority-serving-institutions-in-the-creation-of-a-diverse-quantum-ready-workforce/">Workshop</a>, Washington D.C., USA, July 12-13, 2023 
 </p>
 </li>
 <li><p>Introduction to Quantum Computing, <a href="https://indico.ictp.it/event/10163">ICTP-Quantinuum Quantum Hackathon</a>, Trieste, Italy, March 17, 2023 
