--- a/presentations.html
+++ b/presentations.html
@@ -14638,6 +14638,26 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 
 </li>
+<li><p> National Center for Supercomputing Applications QC Fall workshop,
+TKET Workshop,  online, December 13, 2023 
+</p>
+</li>
+<li><p> BIG Q Hackathon by CQE and QuantX,
+<a href="https://chicagoquantum.org/events/big-q-hackathon-cqe-and-quantx">TKET and H-series Emulator Workshop and Mentorship</a>,  Chicago, IL, September 29 - October 2, 2023 
+</p>
+</li>
+<li><p> Minnesota Quantum Computing Meetup,
+<a href="https://www.meetup.com/minnesota-quantum-computing-meetup/">TKET Workshop</a>,  Minneapolis, MN, September 12, 2023 
+</p>
+</li>
+<li><p> Womanium Quantum Summer Program,
+<a href="https://womanium.org/Quantum/Program">TKET Workshop and H-series virtual reality lab tour</a>,  online, September 24-25, 2023 
+</p>
+</li>
+<li><p>Lawrence Livermore National Laboratory (LLNL), Quantum Computing Summer School,
+TKET Workshop,  online, July 19, 2023 
+</p>
+</li>
 <li><p>Oak Ridge National Laboratory Quantum Computing User Forum,
 <a href="https://www.olcf.ornl.gov/calendar/quantum-computing-user-forum-2023/">TKET Workshop</a>,  Oak Ridge, TN, July 17-20, 2023 
 </p>
