--- a/presentations.html
+++ b/presentations.html
@@ -14655,6 +14655,20 @@ TKET Workshop,  online, July 19, 2023
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
 </li>
+<li><p>University of Texas at El Paso, Physics Seminar, El Paso, Texas, November 10, 2023</p>
+</li>
+<li><p>New Mexico State University, Physics Seminar, Las Cruces, NM, November 9, 2023</p>
+</li>
+<li><p>Quantum A.I. & Security Workshop, Ligthinig Talk, Indianapolis, Indiana, November 6-7, 2023</p>
+</li>
+<li><p>IEEE chapter meeting: Quantum Computing Devices, Cryogenic Electronics and Packaging, Talk, online, October 24, 2023</p>
+</li>
+<li><p>Embry–Riddle Aeronautical University, Physics Seminar, Prescott, AZ, September 8, 2023</p>
+</li>
+<li><p>Northern Arizona University, Physics Seminar, Flagstaff, AZ, September 7, 2023</p>
+</li>
+<li><p>Qubit by Qubit, online, August 22, 2023</p>
+</li>
 <li><p>California Polytechnic State University, Quantum Computing Club, online, May 15, 2023</p>
 </li>
 <li><p><a href="https://www.qsium.com/">Qsium</a>, Quantum Computing Guest Lecture, online, May 12, 2023</p>
@@ -14707,8 +14721,11 @@ TKET Workshop,  online, July 19, 2023
 </ul>
 	
 <h1 id="Panels">Panels<a class="anchor-link" href="#Panels">&#182;</a></h1><ul>
+<li>Career Panel, Goldwater Symposium, online, August 18, 2023</li>
+</li>
 <li>How Quantum Technology is Transforming Industry Sectors, IEEE Quantum Week (QCE22), in Broomfield, Colorado, September 18, 2022</li>
 </ul>
+	
 
 </div>
 </div>
