--- a/presentations.html
+++ b/presentations.html
@@ -14589,6 +14589,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 </li>
+<li><p><a href="https://www.iquise.mit.edu/iQuHACK/2024-02-02">2024 iQuHACK</a>, MIT, Cambridge, MA, February 2nd-4th, 2024
+</p>
+</li>	
 <li><p> National Center for Supercomputing Applications QC Fall workshop,
 TKET Workshop,  online, December 13, 2023 
 </p>
@@ -14654,6 +14657,14 @@ TKET Workshop,  online, July 19, 2023
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
+</li>
+<li><p>UC San Diego, Quantum Computing Lecture, online, January 30, 2024</p>
+</li>
+<li><p>CU Boulder, SPS student club and Quantum Scholars, talk, Boulder, CO, December 6, 2023</p>
+</li>
+<li><p>Columbia University Quantum Club, TKET talk, online, November 29, 2023</p>
+</li>
+<li><p>qConnect conference, talk, Calgary, Alberta, Canada, November 15-16, 2023</p>
 </li>
 <li><p>University of Texas at El Paso, Physics Seminar, El Paso, Texas, November 10, 2023</p>
 </li>
