--- a/presentations.html
+++ b/presentations.html
@@ -14589,7 +14589,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 </li>
-<li><p><a href="https://www.iquise.mit.edu/iQuHACK/2024-02-02">2024 iQuHACK</a>, MIT, Cambridge, MA, February 2nd-4th, 2024
+<li><p><a href="https://www.iquise.mit.edu/iQuHACK/2024-02-02">2024 iQuHACK</a>, MIT, Cambridge, MA, February 2-4, 2024
 </p>
 </li>	
 <li><p> National Center for Supercomputing Applications QC Fall workshop,
@@ -14657,6 +14657,9 @@ TKET Workshop,  online, July 19, 2023
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
+<li><p>Quantum Student Organization (QSO), Purdue University, West Lafayette, Indiana, April 2-3, 2024</p>
+</li>
+<li><p>Post-Quantum AI workshop, Ligthinig Talk, Indianapolis, Indiana, April 1-2, 2024</p>
 </li>
 <li><p>UC San Diego, Quantum Computing Lecture, online, January 30, 2024</p>
 </li>
@@ -14669,8 +14672,6 @@ TKET Workshop,  online, July 19, 2023
 <li><p>University of Texas at El Paso, Physics Seminar, El Paso, Texas, November 10, 2023</p>
 </li>
 <li><p>New Mexico State University, Physics Seminar, Las Cruces, NM, November 9, 2023</p>
-</li>
-<li><p>Quantum A.I. & Security Workshop, Ligthinig Talk, Indianapolis, Indiana, November 6-7, 2023</p>
 </li>
 <li><p>IEEE chapter meeting: Quantum Computing Devices, Cryogenic Electronics and Packaging, Talk, online, October 24, 2023</p>
 </li>
