--- a/presentations.html
+++ b/presentations.html
@@ -14589,6 +14589,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 <h1 id="Workshops-and-Hackathons">Workshops and Hackathons<a class="anchor-link" href="#Workshops-and-Hackathons">&#182;</a></h1><ul>
 </li>
+<li><p><a href="https://yuqc.yale.edu/event/yquantum-2024">|Y⟩Quantum 2024</a>, Yale University, New Haven, CT, April 13-14, 2024
+</p>
+</li>
+<li><p><a href="https://hacktj.org/">2024 HackTJ</a>, Thomas Jefferson High School for
+Science and Technology, Cvent HQ, VA, February 24-25, 2024
+</p>
+</li>	
 <li><p><a href="https://www.iquise.mit.edu/iQuHACK/2024-02-02">2024 iQuHACK</a>, MIT, Cambridge, MA, February 2-4, 2024
 </p>
 </li>	
@@ -14660,6 +14667,8 @@ TKET Workshop,  online, July 19, 2023
 <li><p>Quantum Student Organization (QSO), Purdue University, West Lafayette, Indiana, April 2-3, 2024</p>
 </li>
 <li><p>Post-Quantum AI workshop, Ligthinig Talk, Indianapolis, Indiana, April 1-2, 2024</p>
+</li>
+<li><p>Bryn Mawr College, Physics Colloquium, Bryn Mawr, PA, February 26, 2024</p>
 </li>
 <li><p>UC San Diego, Quantum Computing Lecture, online, January 30, 2024</p>
 </li>
@@ -14733,6 +14742,9 @@ TKET Workshop,  online, July 19, 2023
 </ul>
 	
 <h1 id="Panels">Panels<a class="anchor-link" href="#Panels">&#182;</a></h1><ul>
+<li><p><a href="https://hacktj.org/">WOMEN IN TECH PANEL @ HackTJ 11.0</a>, Thomas Jefferson High School for
+Science and Technology, Cvent HQ, VA, February 24, 2024
+</li>	
 <li>Career Panel, Goldwater Symposium, online, August 18, 2023</li>
 </li>
 <li>How Quantum Technology is Transforming Industry Sectors, IEEE Quantum Week (QCE22), in Broomfield, Colorado, September 18, 2022</li>
