--- a/presentations.html
+++ b/presentations.html
@@ -14664,6 +14664,8 @@ TKET Workshop,  online, July 19, 2023
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 
 <h1 id="Talks">Talks<a class="anchor-link" href="#Talks">&#182;</a></h1><ul>
+<li><p>The Wond'ry Quantum Studio, Vanderbilt University, online, April 10, 2024</p>
+</li>
 <li><p>Quantum Student Organization (QSO), Purdue University, West Lafayette, Indiana, April 2-3, 2024</p>
 </li>
 <li><p>Post-Quantum AI workshop, Ligthinig Talk, Indianapolis, Indiana, April 1-2, 2024</p>
