--- a/presentations.html
+++ b/presentations.html
@@ -14592,6 +14592,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><p><a href="https://yuqc.yale.edu/event/yquantum-2024">|Y⟩Quantum 2024</a>, Yale University, New Haven, CT, April 13-14, 2024
 </p>
 </li>
+<li><p><a href="https://quantum.ncsu.edu/event/nc-state-quantinuum-workshop/">NC State Quantinuum Workshop</a>, North Carolina State University, Raleigh, NC, March 22, 2024
+</p>
+</li>
 <li><p><a href="https://hacktj.org/">2024 HackTJ</a>, Thomas Jefferson High School for
 Science and Technology, Cvent HQ, VA, February 24-25, 2024
 </p>
