--- a/about.html
+++ b/about.html
@@ -10,9 +10,7 @@ After a year as Research Associate, I joined the University of Colorado Colorado
 I earned tenure at UCCS by <a href="https://scholar.google.com/citations?user=S3bNbmMAAAAJ&hl=en">researching biophysical phenomena using super-resolution microscopy techniques and condensed matter physics</a>. 
 During my time at UCCS, I developed and taught numerous physics undergraduate and graduate courses.<p>
 
-<p> As a Quantum Evangelist, I am actively engaging with the quantum community and clients to promote <a href="https://www.quantinuum.com/developers/tket">TKET, Quantinuum's open access, quantum compiler,</a>  which helps users within the quantum ecosystem get the most out of today’s quantum hardware.
-My role involves active engagement with the quantum computing community, providing resources and support for users, and driving TKET's adoption through educational outreach and community engagement. </p>
-
+<p> I am the Technical Prize Director for the XPRIZE Quantum Applications competiton. Before joining XPRIZE, Kathrin was a Quantum Computing Technology Evangelist at Quantinuum </p>
 <p> ► I organize and deliver TKET quantum SDK presentations, workshops, and hackathon challenges.</p>
 
 <p> ► I communicate about TKET quantum SDK to academic and developer communities.</p>
