--- a/about.html
+++ b/about.html
@@ -8,13 +8,6 @@ background: '/img/bg-about.jpg'
 <p> I received my BS in Physics and Applied Mathematics with honors and my Ph.D. in Physics with distinction from the University of New Mexico. 
 After a year as Research Associate, I joined the University of Colorado Colorado Springs (UCCS) as a tenure-track faculty in Physics. 
 I earned tenure at UCCS by <a href="https://scholar.google.com/citations?user=S3bNbmMAAAAJ&hl=en">researching biophysical phenomena using super-resolution microscopy techniques and condensed matter physics</a>. 
-During my time at UCCS, I developed and taught numerous physics undergraduate and graduate courses.<p>
+At UCCS, I developed and taught numerous physics undergraduate and graduate courses. Currently, I am the Technical Prize Director for the XPRIZE Quantum Applications competition. 
+  Before joining XPRIZE, Kathrin was a Quantum Computing Technology Evangelist at Quantinuum </p>
 
-<p> I am the Technical Prize Director for the XPRIZE Quantum Applications competiton. Before joining XPRIZE, Kathrin was a Quantum Computing Technology Evangelist at Quantinuum </p>
-<p> ► I organize and deliver TKET quantum SDK presentations, workshops, and hackathon challenges.</p>
-
-<p> ► I communicate about TKET quantum SDK to academic and developer communities.</p>
-
-<p> ► I create learning content on quantum computing for audiences of varying experience levels.</p>
-
-<p> ► I work with quantum computing educators globally.</p>
