--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Contact Me
-description: Don't hesitate to contact me if you are interested in a Quantinuum/TKET presentation/workshop.
+description: Don't hesitate to contact me.
 background: '/img/bg-contact.jpg'
 form: true
 ---
