--- a/contact.html
+++ b/contact.html
@@ -8,4 +8,4 @@ form: true
 
 <p>Want to get in touch?</p>
 
-<p><a href="mailto:kathrin.spendier@quantinuum.com"> Just send an email</a> and I will get back to you as soon as possible!</p>
+<p><a href="mailto:kathrin.spendier@xprize.org"> Just send an email</a> and I will get back to you as soon as possible!</p>
